--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,15 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+    id('com.google.devtools.ksp')
+
 }
 
 android {
     namespace 'com.example.mywetherapp'
-    compileSdk 34
+    //noinspection GradleCompatible
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.mywetherapp"
@@ -31,17 +35,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.3'
     }
     packagingOptions {
         resources {
@@ -74,6 +78,10 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.4.3'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.core:core-ktx:1.10.1'
+
+    implementation'androidx.room:room-runtime:2.5.2'
+    ksp'androidx.room:room-compiler:2.5.2'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
