--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
     id('com.google.devtools.ksp')
 
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -80,7 +81,15 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
 
     implementation'androidx.room:room-runtime:2.5.2'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.2.0'
     ksp'androidx.room:room-compiler:2.5.2'
+
+    implementation platform('com.google.firebase:firebase-bom:32.2.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    implementation'com.google.firebase:firebase-inappmessaging-display-ktx'
+    implementation'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-messaging:23.2.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
