--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyWetherApp"
         tools:targetApi="31">
+        <service
+            android:name=".notifications.PushNotificationService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
         <activity
             android:name=".ForecastActivity"
             android:exported="false"
