--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.core:core-ktx:1.10.1'
 
+//    tried to remove some dependencies that you mentioned
+//    but the app crash so i put them all back just in case
     implementation'androidx.room:room-runtime:2.5.2'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.2.0'
     ksp'androidx.room:room-compiler:2.5.2'
